appId: com.saucelabs.mydemoapp.android
env:
    USERNAME: user@example.com
    PASSWORD: 123
---
- launchApp:
      appId: "com.saucelabs.mydemoapp.android"
      clearState: true
- tapOn: "View menu"
- tapOn: "Log In"
- assertVisible:
      id: "com.saucelabs.mydemoapp.android:id/nameET"
- tapOn:
      id: "com.saucelabs.mydemoapp.android:id/nameET"
- inputText: ${USERNAME}
- assertVisible:
      id: "com.saucelabs.mydemoapp.android:id/passwordET"
- tapOn:
      id: "com.saucelabs.mydemoapp.android:id/passwordET"
- inputText: ${PASSWORD}
- tapOn:
      text: "Login"
      index: 1
- assertVisible: "App logo and name"
